# espeak-ng

src/: CMakeLists.txt
src/libespeak-ng/: CMakeLists.txt  spect.c  speech.h
src/ucd-tools/: CMakeLists.txt
